<resources>
    <string name="app_name">BucksTrack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BUCKS TRACK</string>
    <string name="nav_header_subtitle">Save Money On the Go</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--user navigation drawer menu items-->
    <string name="menu_spendings">Overview</string>
    <string name="menu_transactions">All Transactions</string>
    <string name="menu_spendtypes">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>

    <!-- user menu options -->
    <string name="action_this_week">This Week</string>
    <string name="action_this_month">This Month</string>
    <string name="action_choose_date_range">Choose Date Range</string>

    <string name="title_activity_categories">CategoriesActivity</string>

    <!-- user login activity hints -->
    <string name="user_login">LOGIN</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="enter_password_hint">Enter Password</string>

    <!-- user signup activity hints and buttons-->
    <string name="user_signup">SIGNUP</string>
    <string name="re_enter_password_hint">Re enter Password</string>
    <string name="title_activity_bucks">BucksActivity</string>

    <!-- user add income expense activity hints and view texts -->
    <string name="textview_add_income">ADD INCOME</string>
    <string name="textview_add_expense">ADD EXPENSE</string>
    <string name="user_save">SAVE</string>
    <string name="enter_title_hint">Title</string>
    <string name="enter_amount_hint">Amount</string>
    <string name="enter_date_hint">Date</string>
    <string name="enter_description_hint">Description</string>
    <string name="enter_fullname_hint">Enter full name</string>
    <string name="textview_balance_text">BALANCE</string>
    <string name="textview_income_text">INCOME</string>
    <string name="textview_expenses_text">EXPENSES</string>

    <!-- Choose Date Range screen strings -->
    <string name="choose_starting_date_text_hint">CHOOSE STARTING DATE</string>
    <string name="choose_ending_date_text_hint">CHOOSE ENDING DATE</string>
    <string name="get_transactions_btn_text">Get Transactions</string>

    <!--fab texts-->
    <string name="add_income_fab_text">Add Income</string>
    <string name="add_expense_fab_text">Add Expense</string>

    <!--currency symbols-->
    <string name="currency_symbol">%1$s %2$d</string>

    <!--date string with day and month padded zero on left for 1 digit-->
    <string name="date_format_string">%1$02d-%2$02d-%3$d</string>

    <!--preferences screen symbols and strings-->
    <string-array name="currency_entries">
        <item>₹</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <string-array name="currency_entry_values">
        <item>₹</item>
        <item>$</item>
        <item>€</item>
    </string-array>

    <string-array name="date_entries">
        <item>dd-mm-yyyy</item>
        <item>dd/mm/yyyy</item>
        <item>mm-dd-yyyy</item>
        <item>mm/dd/yyyy</item>
    </string-array>

    <string-array name="date_entry_values">
        <item>dd-MM-yyyy</item>
        <item>dd/MM/yyyy</item>
        <item>MM-dd-yyyy</item>
        <item>MM/dd/yyyy</item>
    </string-array>

    <string-array name="widget_option_entries">
        <item>Last Income</item>
        <item>Last Expense</item>
    </string-array>

    <string-array name="widget_option_entry_values">
        <item>Last Income</item>
        <item>Last Expense</item>
    </string-array>

    <string name="currency_summary">₹ currency selected</string>
    <string name="date_summary">dd-MM-yyyy format selected</string>
    <string name="widget_option_summary">Last Expense Selected</string>

    <string name="currency_title">Currency</string>
    <string name="date_format_title">Date Format</string>
    <string name="last_login_title">Last Login</string>
    <string name="widget_option_title">Choose Widget</string>

    <string name="currency_default_value">₹</string>
    <string name="date_format_default_value">dd-MM-yyyy</string>
    <string name="widget_option_default_value">Last Expense</string>

    <string name="pref_screen_category_title_settings">Settings</string>
    <string name="pref_screen_category_title_login">Login</string>
    <string name="pref_screen_category_title_widget_option">Widget Data</string>

    <string name="pref_screen_currency_key_name">currency_key</string>
    <string name="pref_screen_date_format_key_name">date_format_key</string>
    <string name="pref_screen_widget_option_key">widget_option_key</string>
    <string name="pref_screen_last_login_key">last_login_key</string>

    <!-- Adding Category Custom Dialog strings -->
    <string name="button_category_dialog_cancel">Cancel</string>
    <string name="button_category_dialog_ok">OK</string>
    <string name="textview_category_dialog_enter">Enter %1$s Category</string>
    <string name="edittext_add_category_dialog_hint">Enter category name</string>

    <!--widget strings-->
    <string name="appwidget_text">BUCKS TRACK</string>
    <string name="appwidget_description">Use this widget , Powered by Chaitanya Penjuri @ Bucks Track Inc.</string>
    <string name="add_widget">Add widget</string>
    <string name="income_categories_text">INCOME CATEGORIES</string>
    <string name="expense_categories_list">EXPENSE CATEGORIES</string>
    <string name="categories_button_add_text">ADD</string>

</resources>
