<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_screen_category_title_settings">
        <ListPreference
            android:key="@string/pref_screen_currency_key_name"
            android:title="@string/currency_title"
            android:entries="@array/currency_entries"
            android:entryValues="@array/currency_entry_values"
            android:summary="@string/currency_summary"
            android:defaultValue="@string/currency_default_value"/>

        <ListPreference
            android:key="@string/pref_screen_date_format_key_name"
            android:title="@string/date_format_title"
            android:entries="@array/date_entries"
            android:entryValues="@array/date_entry_values"
            android:defaultValue="@string/date_format_default_value"
            android:summary="@string/date_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_screen_category_title_login">
        <Preference
            android:key="@string/pref_screen_last_login_key"
            android:title="@string/last_login_title"
            android:summary="@string/last_login_title"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_screen_category_title_widget_option">
        <ListPreference
            android:key="@string/pref_screen_widget_option_key"
            android:title="@string/widget_option_title"
            android:entries="@array/widget_option_entries"
            android:entryValues="@array/widget_option_entry_values"
            android:summary="@string/widget_option_summary"
            android:defaultValue="@string/widget_option_default_value"/>
    </PreferenceCategory>
</PreferenceScreen>