<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="categoryType"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{@string/textview_category_dialog_enter(categoryType), default="Enter that category"}'
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/edittext_add_category_dialog_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:id="@+id/btn_category_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_category_dialog_cancel" />

            <Button
                android:id="@+id/btn_category_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_category_dialog_ok" />
        </LinearLayout>


    </LinearLayout>
</layout>